# emticketen

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/emticketen/: database.py  models.py  utils.py
tests/: conftest.py  test_concurrent.py  test_contested.py  test_relaxed.py
