[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emticketen"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Santtu Pajukanta", email = "santtu@pajukanta.fi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "psycopg[c,pool]",
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/con2/emticketen#readme"
Issues = "https://github.com/con2/emticketen/issues"
Source = "https://github.com/con2/emticketen"

[tool.hatch.version]
path = "src/emticketen/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.hatch-test]
installer = "uv"
dependencies = [
  "pytest",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
